tests/compile_errors/type/012_let_function_reassign_return_mismatch.xr
fn int_fn(x: int) -> int {
    return x
}

fn string_fn(x: int) -> string {
    return string(x)
}

let f = int_fn
f = string_fn
